# makerfabs

./: .gitignore
esp32_dw3000/: CMakeLists.txt  sdkconfig.defaults  sdkconfig.defaults.esp32s3
esp32_dw3000/components/dw3000-decadriver-source/examples/: config_options.h  example_info.c  example_selection.h  port.c  port.h  shared_defines.h  shared_functions.c  shared_functions.h
esp32_dw3000/components/dw3000-decadriver-source/examples/ex_00a_reading_dev_id/: read_dev_id.c
esp32_dw3000/components/dw3000-decadriver-source/examples/ex_05a_ds_twr_init/: ds_twr_initiator.c
esp32_dw3000/components/dw3000-decadriver-source/examples/ex_05b_ds_twr_resp/: ds_twr_responder.c
esp32_dw3000/components/dw3000-decadriver-source/platform/: deca_compat.c
esp32_dw3000/components/dw3000-decadriver-source/platform/esp-idf/decadriver/: CMakeLists.txt
esp32_dw3000/components/libdeca/: dwtest.c
esp32_dw3000/main/: CMakeLists.txt  ds_twr_init.c  ds_twr_resp.c  main.c  simple_rx.c  simple_tx.c
matouch/: .gitignore  CMakeLists.txt  README.md  sdkconfig.defaults.esp32s3
matouch/components/bsp/: CMakeLists.txt  Kconfig.projbuild  bsp_config.h  idf_component.yml
matouch/components/bsp/audio/: bsp_audio.h  no_audio_codec.c  no_audio_codec.h  no_codec.c  no_codec.h
matouch/components/bsp/audio/codecs/: no_audio_codec.c  no_audio_codec.h
matouch/components/bsp/include/: bsp.h  bsp_board.h
matouch/components/bsp/mpu6050/: bsp_mpu6050.c  bsp_mpu6050.h
matouch/components/bsp/ov3360/: bsp_ov3360.h
matouch/components/bsp/pcf85063a/: bsp_pcf85063a.c  bsp_pcf85063a.h
matouch/components/bsp/pcf8563/: bsp_pcf8563.h
matouch/components/bsp/qmi8658/: bsp_qmi8658.c  bsp_qmi8658.h
matouch/components/bsp/sdcard/: bsp_sdcard.c  bsp_sdcard.h
matouch/components/bsp/spiffs/: bsp_spiffs.c  bsp_spiffs.h
matouch/main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.c
matouch/main/boards/: board.h
matouch/main/boards/1-28-gc9a01-cst816s/: board.c  board.h
matouch/main/boards/1-8-sh8601-ft3168/: board.c  config.h
matouch/main/boards/2-8-st7798v-gt911/: board.c  board.h  config.h
matouch/main/boards/3-5-ili9488-ft6236/: board.c  board.h  config.h
matouch/main/boards/4-3-unknown-gt911/: board.c
matouch/main/boards/7-0-jd9165-gt911/: board.c
matouch/main/boards/7-0-unknown-gt911/: board.c
matouch/main/display/v9/: lcd_display.c
matouch/main/firmware/: link_list_menu.c  link_list_menu.h  template.c  template.h
matouch/main/firmware/1-28-gc9a01-cst816s/: release.c
matouch/main/firmware/1-8-sh8601-ft3168/: release.c
matouch/main/firmware/2-8-st7798v-gt911/: release.c
matouch/main/firmware/3-5-ili9488-ft6236/: release.c
matouch/main/firmware/4-3-unknown-gt911/: release.c
matouch/main/firmware/7-0-jd9165-gt911/: release.c
matouch/main/firmware/7-0-unknown-gt911/: release.c
